Minor fixes to enable tests run correctly with mvn test